# ai-travel-project

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  README.md  TECHNICAL_DESIGN.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20260519_163338_add_hotel_to_itinerary_days.py  20260519_164500_add_hotel_options.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ItineraryForm.tsx  ItineraryTimeline.tsx  Navbar.tsx  PlanGenerating.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
src/: main.py
src/agent/: registry.py
src/agent/prompts/: react_system.py  system.py
src/agent/tools/: __init__.py  budget_tools.py  hotel_tools.py  poi_tools.py  schedule_tools.py  search_rag_tools.py  weather_tools.py
src/agent/workflow/: agent.py  graph.py  state.py
src/api/: deps.py
src/api/v1/: cities.py  health.py  itineraries.py  pois.py  router.py  users.py
src/common/: errors.py  logger.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  database.py  enums.py  schemas.py  tables.py
src/scripts/: init_db.sql  seed_data.py
src/services/cache/: redis.py
src/services/llm/: client.py
src/services/queue/: consumer.py  redis_queue.py
src/services/rag/: __init__.py  embeddings.py  (+3 more)
tests/: conftest.py
tests/test_agent/: test_agent.py
tests/test_api/: test_api.py
tests/test_models/: test_models.py
tests/test_rag/: test_rag.py
tests/test_stream/: test_stream.py
(+15 files in other folders)
